@@ -4,6 +4,7 @@
 #  AUTHOR(S): Satoshi Tanaka                                          #
 #                                                                     #
 #  DATE: November 10, 1999                                            #
+#        May      20, 2000                                            # 
 #                                                                     #
 #  CONTENTS: A basic macro for visualization of detector geometry     #
 #                                                                     #
@@ -11,7 +12,7 @@
 #          Idle> /control/execute exN03Vis1.mac                       #
 #                                                                     #
 #  REQUIRED PLATFORMS & SOFTWARES: Unix, X-window, OpenGL,            #
-#                                  DAWN (version 3.80 of after)       #
+#                                  DAWN (version 3.80 or after)       #
 #                                  gv (Ghostview), Tcl/Tk             #
 #                                                                     #
 #  ENVIRONMENTAL VARIABLES (C-MACROS) FOR INSTALLATION:               #
@@ -84,10 +85,10 @@
 ##########################################################
 # Visualization with DAWNFILE driver
 #
-#  * The visualized view is saved to a file "g4.eps"  
+#  * The visualized view is saved to a file "g4_XX.eps"  
 #    with the "vectorized" PostScript format.
 #
-#  * In order to make the file "g4.eps" printable, 
+#  * In order to make the file "g4_XX.eps" printable, 
 #    append the "showpage" PostScript command to the file. 
 #    You can do it with the 4th page of the DAWN GUI panel 
 #    or by editing the file by hand.
@@ -121,7 +122,7 @@
 /vis/camera/viewpoint  35 35
 /vis/draw/current
 /vis/draw/axes         0 0 0 500
-/vis/draw/text         0 0 0 mm  50 -300 -200   Absorber.0 
+/vis/draw/text         0 0 0 mm  50 -100 -200   Absorber.0 
 /vis/show/view
 
 #-----  
@@ -144,7 +145,7 @@
 /vis/camera/viewpoint  35 35
 /vis/draw/current
 /vis/draw/axes         0 0 0 500
-/vis/draw/text         0 0 0 mm 50 -200 -200   Gap.0
+/vis/draw/text         0 0 0 mm 50 -100 -200   Gap.0
 /vis/show/view
 
 #-----
