@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2000-05-19 13:06:16 stanaka Exp $
+$Id: History,v 1.14 2000-05-20 05:00:52 stanaka Exp $
 --------------------------------------------------
 
      =========================================================
@@ -14,6 +14,14 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+20th May 2000 Satoshi Tanaka 
+- exNO3VisX.mac's are updated corresponding to development 
+  of the new vis commands.
+- The command /vis/add/trajectories is added to exNO3VisX.mac's.
+  Instead the C++ method "DrawTrajectory()" is removed from 
+  ExN03EventAction::EndOfEventAction(). 
+
 19th May 2000 Satoshi Tanaka 
 - g4.xrm (Xt resource file for UI) is renamed to g4Xt.xrm
 
